<resources>
    <string name="app_name">Report Traffic Offences</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full name</string>
    <string name="action_add_file">Action</string>
    <string name="title_activity_maps">Map</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_item_report">Report Offence</string>
    <string name="drawer_item_map">View Map</string>
    <string name="hello_world">Hello World</string>

    <string name="spinner_title">Spinner</string>
    <string name="upload_image">Choose Image</string>
    <string name="offence_committed">Offence Committed:</string>
    <string name="select">Select here</string>
    <string name="description_of_scene"><font size="15">Enter a description of the scene...</font></string>
    <string name="code_blue">Blue</string>
    <string name="code_purple">Purple</string>
    <string name="code_red">Red</string>
    <string name="image_offence">Image Offence</string>
    <string name="submit_report">Submit report</string>

</resources>
