<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

    <RelativeLayout android:id="@+id/activity_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity.LocationActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:labelFor="@+id/spinner"
                android:text="Offence Committed:" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="18dp"
                android:prompt="@string/select"
                android:spinnerMode="dialog"
                android:theme="@style/MyEditTextTheme"
                android:contentDescription="--Select--" />

            <TextView
                android:id="@+id/code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_below="@+id/spinner"
                android:layout_marginTop="10dp"
                android:labelFor="@+id/radioGroupCodes"
                android:text="Code:" />

            <RadioGroup
                android:id="@+id/radioGroupCodes"
                android:layout_below="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/codeBlue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/code_blue" />

                <RadioButton
                    android:id="@+id/codePurple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/code_purple" />

                <RadioButton
                    android:id="@+id/codeRed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/code_red" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/radioGroupCodes"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_alignParentStart="true"
                android:text="Upload an image of the offence:" />

            <Button
                android:id="@+id/buttonChoose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/input_register"
                android:text="Choose Image"
                android:textColor="@color/btn_login_bg" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_below="@+id/buttonChoose"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:contentDescription="@string/image_offence" />


            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:hint="@string/description_of_scene"
                android:theme="@style/MyEditTextTheme" />

            <Button
                android:id="@+id/find_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/bg_login"
                android:text="@string/submit_report"
                android:textColor="@color/btn_login_bg" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
